partial fix for http://bugzilla.gnome.org/show_bug.cgi?id=139677 requires that all splits in lot share a common transaction currency.

git-svn-id: svn+ssh://svn.gnucash.org/repo/gnucash/trunk@9973 57a11ea4-9604-0410-9ed3-97b8803252fd